# Climate-trends-Bayesian

./: .gitognore  Makefile  README.md  pyproject.toml
data/raw/: era5_berlin_t2m.nc  era5_paris_t2m.nc
notebooks/: 00_download_data.ipynb  01_EDA.ipynb  03_Model_B.ipynb  EDA.ipynb
src/climate_trends/: Model_A.py  download.py  load.py
tests/: 02_test_Model_A.py
